# deeper_blue

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake  errlog.txt  event_dump.json  hmm.txt  main.cpp  possible_moves.txt  winner.txt  winner_backup.txt
chess/: CMakeLists.txt  README.md  build.sh
chess/include/lambdex/chess/: apply_move.hpp  basic.hpp  board.hpp  chess.hpp  chess_engine.hpp  evaluation.hpp  fen.hpp  game_interface.hpp  move.hpp  move_tree.hpp  move_validation.hpp  piece_movement.hpp  position.hpp  possible_moves.hpp
chess/include/lambdex/chess/board/: bit_board.hpp  board_with_state.hpp  generic_board.hpp  piece_board.hpp  readme.txt
chess/include/lambdex/utility/: format.hpp
chess/lib/: CMakeLists.txt
chess/source/: apply_move.cpp  basic.cpp  board.cpp  chess_engine.cpp  evaluation.cpp  fen.cpp  move_validation.cpp  piece_movement.cpp
chess/source/board/: CMakeLists.txt  bit_board.cpp
chess/tests/: CMakeLists.txt  test_support.cmake
chess/tests/apply_move/: test.cpp
chess/tests/fen/: test.cpp
chess/tests/move_validation/: move_strings.json  move_strings.txt  test.cpp
chess/tests/piece_movement/: test.cpp
chess_view/: CMakeLists.txt  config.json  testdump
chess_view/assets/fonts/Hack/: LICENSE.txt
chess_view/assets/shaders/: compute.glsl
chess_view/assets/shaders/board/: fragment.glsl  vertex.glsl
chess_view/assets/shaders/nodes/: fragment.glsl  vertex.glsl
chess_view/assets/shaders/text/: fragment.glsl  vertex.glsl
chess_view/lib/: CMakeLists.txt
chess_view/lib/cppfreetype/: .gitignore  CMakeLists.txt  CMakeUtils.cmake
chess_view/lib/cppfreetype/include/cppfreetype/: bitmap.hpp  error.hpp  face.hpp  freetype.hpp  library.hpp
chess_view/lib/cppfreetype/lib/: CMakeLists.txt
chess_view/lib/glad/: CMakeLists.txt
chess_view/lib/glad/include/glad/: glad.h
chess_view/lib/glad/src/: glad.c
chess_view/source/: board_artist.cpp  board_artist.hpp  gfx.hpp  main.cpp  slot.hpp  window.hpp
chess_view/source/application/: CMakeLists.txt  config.cpp  config.hpp
chess_view/source/gfx/: element.hpp  gfx.cpp  gfx.hpp  gl.hpp  image.cpp  image.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
chess_view/source/gfx/artists/: board_artist.cpp  board_artist.hpp  text_artist.cpp  text_artist.hpp
chess_view/source/gfx/elements/: text.hpp
chess_view/source/gfx/shader/: shader.cpp  shader.hpp  uniform_block.hpp  view_block.hpp
chess_view/source/text/: artist.cpp  artist.hpp  font.cpp  font.hpp  text.cpp  text.hpp
chess_view/source/utility/: filesystem.hpp  json.cpp  json.hpp
controller/: CMakeLists.txt
controller/source/: main.cpp
engines/: CMakeLists.txt
engines/random_engine/: CMakeLists.txt
engines/random_engine/include/: engine.h
lib/: CMakeLists.txt
lib/nlohmann/: CMakeLists.txt  license.txt
nnet_dump/: best.txt  best_backup.txt
remote/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  api_glue.cpp  api_glue.hpp  cpu_profiling.hpp  main.cpp
source/api/: api.cpp  api.hpp  env.cpp  env.hpp  lichess.cpp  lichess.hpp  lichess_http_api.cpp  lichess_http_api.hpp  oath.cpp  oath.hpp
source/api/client/: client.cpp  client.hpp
source/api/lichess/: lichess_http_api.cpp  lichess_http_api.hpp
source/application/: application.cpp  application.hpp  env.cpp  env.hpp
source/chess/: basic.cpp  basic.hpp  board.hpp  chess.hpp  chess_engine.hpp  move.hpp  move_tree.hpp  piece_movement.hpp
source/chess/board/: CMakeLists.txt  bitboard.hpp  board.cpp  board.hpp
source/chess/engines/: baby_engine.cpp  baby_engine.hpp  greedy_engine.cpp  greedy_engine.hpp  neural_engine.cpp  neural_engine.hpp  random_engine.cpp  random_engine.hpp
source/chess/engines/tree_engine/: baby_engine.cpp  baby_engine.hpp  tree_build.cpp  tree_build.hpp  tree_engine.cpp  tree_engine.hpp
source/chess/generic/: generic_board.hpp  readme.txt
source/controller/: controller_host.cpp  controller_host.hpp
source/neural/: network.hpp
source/remote_host/: readme.txt  remote_host.cpp  remote_host.hpp
source/utility/: filesystem.hpp  format.hpp  http.cpp  http.hpp  http_fwd.hpp  httpstream.hpp  io.hpp  json.cpp  json.hpp  random.hpp  sharedlib.cpp  sharedlib.hpp  thread_pool.hpp  unordered_map.hpp
